# ffi-cell

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  justfile
src/: lib.rs  test.rs
