[package]
name = "ffi-cell"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.0.0"
edition = "2024"
description = "Lend objects across ffi boundaries"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
derive_more = { version = "2.0.1", default-features = false, features = [
  "display",
  "error",
  "from",
] }

[lints.clippy]
dbg_macro = "warn"
